--- a/app/src/main/res/layout/activity_module_list.xml
+++ b/app/src/main/res/layout/activity_module_list.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ModuleList">
+    tools:context=".ModuleList"
+    tools:layout_editor_absoluteY="81dp">
 
     <ScrollView
         android:id="@+id/scrollView2"
@@ -246,13 +247,9 @@
 
     <TextView
         android:id="@+id/modulesTextView"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="186dp"
-        android:layout_marginLeft="186dp"
+        android:layout_width="233dp"
+        android:layout_height="42dp"
         android:layout_marginTop="26dp"
-        android:layout_marginEnd="97dp"
-        android:layout_marginRight="97dp"
         android:layout_marginBottom="8dp"
         android:background="#00DBB781"
         android:clickable="false"
@@ -262,12 +259,20 @@
         android:textStyle="bold"
         android:typeface="normal"
         app:layout_constraintBottom_toTopOf="@+id/scrollView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.636"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.02"
         tools:text="My Modules" />
+
+    <Button
+        android:id="@+id/signOutBtn"
+        android:layout_width="91dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:text="Sign Out"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
