--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -60,18 +60,15 @@
 
     <EditText
         android:id="@+id/ratingInfo"
-        android:layout_width="350dp"
-        android:layout_height="50dp"
+        android:layout_width="312dp"
+        android:layout_height="54dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="53dp"
-        android:layout_marginRight="53dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Overall Rating: No Data Yet"
         app:layout_constraintBottom_toTopOf="@+id/enterRatingText"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -124,5 +121,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/postCommentText"
         app:layout_constraintTop_toBottomOf="@+id/commentThread" />
+
+    <Button
+        android:id="@+id/signOutBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:text="sign out"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:layout_editor_absoluteY="8dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
