--- a/app/src/main/res/layout/activity_attendance.xml
+++ b/app/src/main/res/layout/activity_attendance.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background2"
     tools:context=".Attendance">
 
 
@@ -27,6 +28,8 @@
         android:layout_height="wrap_content"
         android:onClick="onAttendedClick"
         android:text="Attended"
+        android:textColor="#FFFFFF"
+        android:background="#1580c6"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.329"
@@ -42,6 +45,8 @@
         android:layout_marginLeft="32dp"
         android:layout_marginBottom="16dp"
         android:onClick="onMissedClick"
+        android:background="#c64715"
+        android:textColor="#FFFFFF"
         android:text="Missed"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,6 +65,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Module Name"
+        android:background="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.405"
         app:layout_constraintStart_toStartOf="parent"
