--- a/app/src/main/res/layout/activity_modules_new_page.xml
+++ b/app/src/main/res/layout/activity_modules_new_page.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background2"
     tools:context=".ModulesNewPage">
 
     <ImageView
@@ -14,7 +15,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/backgorund" />
+        />
 
     <TextView
         android:id="@+id/textView2"
@@ -28,22 +29,20 @@
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.054" />
 
     <Button
-        android:id="@+id/ReviewBtn"
-        android:layout_width="146dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="133dp"
-        android:layout_marginLeft="133dp"
-        android:layout_marginEnd="132dp"
-        android:layout_marginRight="132dp"
-        android:text="Review"
-        app:layout_constraintBottom_toTopOf="@+id/TimetableBtn"
+        android:id="@+id/TimetableBtn"
+        android:layout_width="147dp"
+        android:layout_height="45dp"
+        android:text="timeTable"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/AttendanceBtn" />
+        app:layout_constraintTop_toBottomOf="@+id/ReviewBtn" />
 
     <Button
         android:id="@+id/AttendanceBtn"
@@ -57,16 +56,23 @@
         android:text="Attendance"
         app:layout_constraintBottom_toTopOf="@+id/ReviewBtn"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
-        android:id="@+id/TimetableBtn"
-        android:layout_width="147dp"
-        android:layout_height="45dp"
-        android:text="timeTable"
+        android:id="@+id/ReviewBtn"
+        android:layout_width="146dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="133dp"
+        android:layout_marginLeft="133dp"
+        android:layout_marginEnd="132dp"
+        android:layout_marginRight="132dp"
+        android:text="Review"
+        app:layout_constraintBottom_toTopOf="@+id/TimetableBtn"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ReviewBtn" />
+        app:layout_constraintTop_toBottomOf="@+id/AttendanceBtn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
