--- a/app/src/main/res/layout/activity_modules_new_page.xml
+++ b/app/src/main/res/layout/activity_modules_new_page.xml
@@ -1,5 +1,6 @@
+  
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,129 +8,72 @@
     android:background="@drawable/background2"
     tools:context=".ModulesNewPage">
 
-    <TextView
-        android:id="@+id/LoginText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginBottom="30dp"
-        android:text="Student HUB"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="#009688"
-        android:textColorHighlight="#00FFFFFF"
-        android:textSize="40sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="120dp"
-        android:layout_height="50dp"
-        android:layout_below="@+id/LoginText"
-        android:layout_centerInParent="true"
-        android:layout_marginRight="100dp"
-        android:background="#009688"
-        android:gravity="center"
-        android:text="Login"
-        android:textColor="#FFFFFF"
-        android:textSize="35dp"
-        android:textStyle="bold" />
-
-    <EditText
-        android:id="@+id/ModuleNameText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="46dp"
-        android:layout_marginRight="30dp"
-        android:focusable="true"
-        android:hint="Enter Name"
-        android:textColorHighlight="#00CEBA"
-        android:textColorHint="#009688" />
-
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true" />
-
-    <EditText
-        android:id="@+id/editText2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/ModuleNameText"
-        android:layout_alignEnd="@+id/ModuleNameText"
-        android:layout_alignRight="@+id/ModuleNameText"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="0dp"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:textColorHint="#009688" />
+        android:id="@+id/imageView3"
+        android:layout_width="1333dp"
+        android:layout_height="884dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/editText2"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="30dp"
-        android:text="Attempts Left:"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textView2"
-        android:layout_alignBottom="@+id/textView2"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginLeft="-100dp"
-        android:layout_toEndOf="@+id/LoginText"
-        android:layout_toRightOf="@+id/LoginText"
-        android:text="New Text"
-        android:textSize="18sp" />
-  
-      <Button
-        android:id="@+id/TeacherPage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Teacher Login" />
-
-   <Button
-        android:id="@+id/buttonAttended"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginRight="-100dp"
-        android:layout_marginBottom="50dp"
-        android:layout_toStartOf="@+id/LoginText"
-        android:layout_toLeftOf="@+id/LoginText"
-        android:text="login" />
+        android:layout_width="392dp"
+        android:layout_height="56dp"
+        android:foregroundGravity="center_horizontal"
+        android:gravity="center_horizontal|center_vertical"
+        android:padding="10dp"
+        android:text="Module Name"
+        android:textSize="18sp"
+        android:textStyle="bold|italic"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.473"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.054" />
 
     <Button
-        android:id="@+id/buttonMissed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="-100dp"
-        android:layout_marginBottom="50dp"
-        android:layout_toEndOf="@+id/LoginText"
-        android:layout_toRightOf="@+id/LoginText"
-        android:text="Cancel" />
+        android:id="@+id/TimetableBtn"
+        android:layout_width="147dp"
+        android:layout_height="45dp"
+        android:text="timeTable"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ReviewBtn" />
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/AttendanceBtn"
+        android:layout_width="145dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="133dp"
+        android:layout_marginLeft="133dp"
+        android:layout_marginTop="133dp"
+        android:layout_marginEnd="133dp"
+        android:layout_marginRight="133dp"
+        android:text="Attendance"
+        app:layout_constraintBottom_toTopOf="@+id/ReviewBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <Button
+        android:id="@+id/ReviewBtn"
+        android:layout_width="146dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="133dp"
+        android:layout_marginLeft="133dp"
+        android:layout_marginEnd="132dp"
+        android:layout_marginRight="132dp"
+        android:text="Review"
+        app:layout_constraintBottom_toTopOf="@+id/TimetableBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/AttendanceBtn" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
