--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -72,8 +72,6 @@
         android:layout_marginEnd="61dp"
         android:layout_marginRight="61dp"
         android:layout_marginBottom="-2dp"
-        android:layout_toEndOf="@+id/LoginText"
-        android:layout_toRightOf="@+id/LoginText"
         android:text="New Text"
         android:textColor="#FFFFFF"
         android:textSize="18sp" />
@@ -91,33 +89,34 @@
         android:text="Attempts Left:"
         android:textColor="#FFFFFF"
         android:textSize="18sp" />
-  
+
       <Button
         android:id="@+id/TeacherPage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Teacher Login" />
 
-   <Button
+    <Button
         android:id="@+id/buttonAttended"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_marginLeft="60dp"
         android:layout_marginRight="-100dp"
-        android:layout_marginBottom="42dp"
-        android:layout_toStartOf="@+id/LoginText"
-        android:layout_toLeftOf="@+id/LoginText"
+
+        android:layout_marginBottom="44dp"
         android:text="login" />
 
     <Button
         android:id="@+id/buttonMissed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="-100dp"
-        android:layout_marginBottom="50dp"
-        android:layout_toEndOf="@+id/LoginText"
-        android:layout_toRightOf="@+id/LoginText"
+
+        android:layout_marginRight="60dp"
+        android:layout_marginBottom="44dp"
         android:text="Cancel" />
 
 </RelativeLayout>
