link to log in page

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -154,22 +154,20 @@
         android:layout_width="91dp"
         android:layout_height="52dp"
 
-        android:layout_marginTop="2dp"
-        android:layout_marginBottom="9dp"
+        android:layout_marginTop="8dp"
         android:text="Register"
-        app:layout_constraintBottom_toTopOf="@+id/exit"
+        app:layout_constraintBottom_toTopOf="@+id/LoggingButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/year" />
 
     <Button
-        android:id="@+id/exit"
+        android:id="@+id/LoggingButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="9dp"
         android:layout_marginBottom="8dp"
-        android:text="Exit"
+        android:text="Already registered? Click here to log in."
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
