modify layout & configure back button

--- a/app/src/main/res/layout/activity_modules_new_page.xml
+++ b/app/src/main/res/layout/activity_modules_new_page.xml
@@ -9,14 +9,15 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="392dp"
-        android:layout_height="56dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
+        android:background="#9FFFFFFF"
         android:foregroundGravity="center_horizontal"
         android:gravity="center_horizontal|center_vertical"
         android:padding="10dp"
@@ -35,7 +36,7 @@
         android:layout_height="46dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
@@ -79,38 +80,36 @@
 
     <EditText
         android:id="@+id/lectureName"
-        android:layout_width="387dp"
-        android:layout_height="57dp"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:ems="10"
+        android:background="#9FFFFFFF"
         android:inputType="textPersonName"
         android:text="Lecturer: Name"
         app:layout_constraintBottom_toTopOf="@+id/lectureEmail"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
         android:id="@+id/lectureEmail"
-        android:layout_width="382dp"
-        android:layout_height="54dp"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:ems="10"
+        android:layout_marginRight="8dp"
+        android:background="#9FFFFFFF"
         android:inputType="textPersonName"
         android:text="Email: email@tcd.ie"
         app:layout_constraintBottom_toTopOf="@+id/ReviewBtn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lectureName" />
 
