--- a/app/src/main/res/layout/activity_alarm_page.xml
+++ b/app/src/main/res/layout/activity_alarm_page.xml
@@ -6,6 +6,81 @@
     android:layout_height="match_parent"
     tools:context=".AlarmPage">
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/reminderDisplay2"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:layout_margin="10dp"
+        android:layout_marginBottom="-100dp"
+        app:cardElevation="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/reminderDisplay"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.50"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/head1"
+        app:layout_constraintVertical_bias="0.120000005">
+
+        <ImageView
+            android:id="@+id/imageView32"
+            android:layout_width="46dp"
+            android:layout_height="38dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="483dp"
+            app:srcCompat="@android:drawable/ic_lock_idle_alarm" />
+
+        <TextView
+            android:id="@+id/h12"
+            android:layout_width="257dp"
+            android:layout_height="23dp"
+            android:layout_marginStart="57dp"
+            android:layout_marginLeft="70dp"
+            android:layout_marginTop="18dp"
+            android:layout_marginEnd="97dp"
+            android:layout_marginRight="97dp"
+            android:text="Software Design Analysis"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/h22"
+            android:layout_width="301dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="57dp"
+            android:layout_marginLeft="57dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="53dp"
+            android:layout_marginRight="53dp"
+            android:text="Project presentation"
+            android:textSize="18sp"
+            android:textStyle="italic" />
+
+        <TextView
+            android:id="@+id/h32"
+            android:layout_width="94dp"
+            android:layout_height="21dp"
+            android:layout_marginStart="57dp"
+            android:layout_marginLeft="57dp"
+            android:layout_marginTop="65dp"
+            android:layout_marginEnd="1dp"
+            android:layout_marginRight="1dp"
+            android:layout_marginBottom="473dp"
+            android:text="10/3/2020"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/h42"
+            android:layout_width="106dp"
+            android:layout_height="21dp"
+            android:layout_marginLeft="150dp"
+            android:layout_marginTop="65dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginBottom="473dp"
+            android:text="11:00"
+            android:textStyle="bold" />
+    </androidx.cardview.widget.CardView>
+
     <TextView
         android:id="@+id/head1"
         android:layout_width="230dp"
@@ -21,12 +96,85 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/reminderDisplay"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:layout_margin="10dp"
+        app:cardElevation="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/remindersPage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/head1"
+        app:layout_constraintVertical_bias="0.29000002">
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="46dp"
+            android:layout_height="38dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="483dp"
+            app:srcCompat="@android:drawable/ic_lock_idle_alarm" />
+
+        <TextView
+            android:id="@+id/h1"
+            android:layout_width="257dp"
+            android:layout_height="23dp"
+            android:layout_marginStart="57dp"
+            android:layout_marginLeft="70dp"
+            android:layout_marginTop="18dp"
+            android:layout_marginEnd="97dp"
+            android:layout_marginRight="97dp"
+            android:text="Computer Networks"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/h2"
+            android:layout_width="301dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="57dp"
+            android:layout_marginLeft="57dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="53dp"
+            android:layout_marginRight="53dp"
+            android:text="Project 1"
+            android:textSize="18sp"
+            android:textStyle="italic" />
+
+        <TextView
+            android:id="@+id/h3"
+            android:layout_width="94dp"
+            android:layout_height="21dp"
+            android:layout_marginStart="57dp"
+            android:layout_marginLeft="57dp"
+            android:layout_marginTop="65dp"
+            android:layout_marginEnd="1dp"
+            android:layout_marginRight="1dp"
+            android:layout_marginBottom="473dp"
+            android:text="11/3/2020"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/h4"
+            android:layout_width="106dp"
+            android:layout_height="21dp"
+            android:layout_marginLeft="150dp"
+            android:layout_marginTop="65dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginBottom="473dp"
+            android:text="12:00"
+            android:textStyle="bold" />
+    </androidx.cardview.widget.CardView>
+
     <ImageView
         android:id="@+id/remindersPage"
         android:layout_width="68dp"
         android:layout_height="67dp"
-        android:layout_marginStart="323dp"
-        android:layout_marginLeft="323dp"
+        android:layout_marginStart="300dp"
+        android:layout_marginLeft="300dp"
         android:layout_marginTop="515dp"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
@@ -37,86 +185,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_input_add" />
-
-    <TextView
-        android:id="@+id/h1"
-        android:layout_width="257dp"
-        android:layout_height="23dp"
-        android:layout_marginStart="57dp"
-        android:layout_marginLeft="57dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="97dp"
-        android:layout_marginRight="97dp"
-        android:text="Module Name"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/h2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/head1" />
-
-    <TextView
-        android:id="@+id/h2"
-        android:layout_width="301dp"
-        android:layout_height="19dp"
-        android:layout_marginStart="57dp"
-        android:layout_marginLeft="57dp"
-        android:layout_marginEnd="53dp"
-        android:layout_marginRight="53dp"
-        android:text="Message"
-        android:textSize="11sp"
-        android:textStyle="italic"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/h1" />
-
-    <TextView
-        android:id="@+id/h3"
-        android:layout_width="94dp"
-        android:layout_height="21dp"
-        android:layout_marginStart="57dp"
-        android:layout_marginLeft="57dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
-        android:layout_marginBottom="473dp"
-        android:text="Date"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/h4"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/h2" />
-
-    <TextView
-        android:id="@+id/h4"
-        android:layout_width="106dp"
-        android:layout_height="21dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginLeft="1dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="153dp"
-        android:layout_marginRight="153dp"
-        android:layout_marginBottom="473dp"
-        android:text="Time"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/h3"
-        app:layout_constraintTop_toBottomOf="@+id/h2" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="46dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginTop="82dp"
-        android:layout_marginEnd="7dp"
-        android:layout_marginRight="7dp"
-        android:layout_marginBottom="483dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/h1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_lock_idle_alarm" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
